Change imageToByte method